--- a/home/dot_glzr/zebar/glzwm-widget-pack/main-widget/index.html
+++ b/home/dot_glzr/zebar/glzwm-widget-pack/main-widget/index.html
@@ -4,17 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <!-- Base styles for better consistency across platforms (aka. CSS reset). -->
-  <link rel="stylesheet" type="text/css" href="../normalize.css" />
-
-  <!-- Custom styles. -->
-  <link rel="stylesheet" type="text/css" href="./styles.css" />
-
-  <!-- Add empty favicon to suppress not found errors. -->
-  <link rel="icon" href="data:;" />
-
-  <!-- Allows React to be run buildless via "text/babel" script below. -->
+  <link rel="stylesheet" type="text/css" href="./styles-new.css" />
   <script src="https://unpkg.com/@babel/standalone@7.25.6/babel.min.js"
     integrity="sha256-aS0B0wnsaDByLfE16h4MDCP1fQFccysd1YWOcV+gbBo=" crossorigin="anonymous"></script>
 </head>
@@ -23,12 +13,9 @@
   <div id="root"></div>
 
   <script type="text/babel" data-type="module">
-    import React, {
-      useState,
-      useEffect,
-    } from 'https://esm.sh/react@18?dev';
+    import React, { useState, useEffect } from 'https://esm.sh/react@18?dev';
     import { createRoot } from 'https://esm.sh/react-dom@18/client?dev';
-    import * as zebar from 'https://esm.sh/zebar@2';
+    import * as zebar from 'https://esm.sh/zebar@3.0';
     import { checkAzureStatus } from './azure-status.js';
 
     const providers = zebar.createProviderGroup({
@@ -39,6 +26,7 @@
       battery: { type: 'battery' },
       memory: { type: 'memory' },
       weather: { type: 'weather' },
+      systray: { type: 'systray' },
     });
 
     createRoot(document.getElementById('root')).render(<App />);
@@ -46,6 +34,14 @@
     function App() {
       const [output, setOutput] = useState(providers.outputMap);
       const [azureStatus, setAzureStatus] = useState({ hasIssues: false });
+
+      const allowedSystrayIcons = [
+        'eset',
+        'outlook',
+        'teams',
+        'slack',
+        'discord'
+      ];
 
       useEffect(() => {
         providers.onOutput(() => setOutput(providers.outputMap));
@@ -155,7 +151,6 @@
               </div>
             )}
           </div>
-
           <div className="center">
             <div>{output.date?.formatted}</div>
             <div
@@ -168,7 +163,6 @@
               Azure {azureStatus.hasIssues ? '⚠️' : '✅'}
             </div>
           </div>
-
           <div className="right">
             {output.glazewm && (
               <>
@@ -232,6 +226,32 @@
               <div className="weather">
                 {getWeatherIcon(output.weather)}
                 {Math.round(output.weather.celsiusTemp)}°C
+              </div>
+            )}
+
+            {output.systray && (
+              <div className="systray">
+                {output.systray.icons
+                  .filter(icon => {
+                    const tooltip = icon.tooltip.toLowerCase();
+                    return allowedSystrayIcons.some(allowed => tooltip.includes(allowed));
+                  })
+                  .map(icon => (
+                    <img
+                      key={icon.id}
+                      className="systray-icon"
+                      src={icon.iconUrl}
+                      title={icon.tooltip}
+                      onClick={e => {
+                        e.preventDefault();
+                        output.systray.onLeftClick(icon.id);
+                      }}
+                      onContextMenu={e => {
+                        e.preventDefault();
+                        output.systray.onRightClick(icon.id);
+                      }}
+                    />
+                  ))}
               </div>
             )}
           </div>
