--- a/home/dot_glzr/zebar/glzwm-widget-pack/main-widget/index.html
+++ b/home/dot_glzr/zebar/glzwm-widget-pack/main-widget/index.html
@@ -38,6 +38,7 @@
       const allowedSystrayIcons = [
         'eset',
         'outlook',
+        'email',
         'teams',
         'slack',
         'discord'
