update weather location

--- a/home/dot_glzr/zebar/glzwm-widget-pack/main-widget/index.html
+++ b/home/dot_glzr/zebar/glzwm-widget-pack/main-widget/index.html
@@ -25,7 +25,7 @@
       date: { type: 'date', formatting: 'EEE d MMM T' },
       battery: { type: 'battery' },
       memory: { type: 'memory' },
-      weather: { type: 'weather' },
+      weather: { type: 'weather', latitude: '51.127180', longitude: '16.963423' },
       systray: { type: 'systray' },
     });
 
